--- a/WBooks/source/controllers/Navigation/NavigationBar/NavigationBar.xib
+++ b/WBooks/source/controllers/Navigation/NavigationBar/NavigationBar.xib
@@ -24,23 +24,25 @@
                     <rect key="frame" x="0.0" y="0.0" width="460" height="47"/>
                     <color key="backgroundColor" red="0.91764705882352937" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UXB-Nm-LdZ">
-                    <rect key="frame" x="3" y="11" width="25" height="25"/>
+                <button opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UXB-Nm-LdZ">
+                    <rect key="frame" x="20" y="44" width="18" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="UXB-Nm-LdZ" secondAttribute="height" multiplier="1:1" id="q9U-wG-Lbg"/>
+                        <constraint firstAttribute="height" constant="18" id="2e7-1y-TGT"/>
+                        <constraint firstAttribute="width" constant="18" id="JOv-pd-c4Q"/>
                     </constraints>
                     <state key="normal" image="ic_notifications"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qrJ-P3-Tga">
-                    <rect key="frame" x="432" y="11" width="25" height="25"/>
+                <button opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qrJ-P3-Tga">
+                    <rect key="frame" x="432" y="51" width="18" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="qrJ-P3-Tga" secondAttribute="height" multiplier="1:1" id="93c-iF-I1f"/>
+                        <constraint firstAttribute="width" constant="18" id="JsQ-eA-x5V"/>
+                        <constraint firstAttribute="height" constant="18" id="twJ-hs-54c"/>
                     </constraints>
                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <state key="normal" image="ic_search"/>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LIBRARY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s1f-di-Ib0">
-                    <rect key="frame" x="41" y="3" width="378" height="41"/>
+                    <rect key="frame" x="196.5" y="3" width="67" height="41"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -49,25 +51,22 @@
             <viewLayoutGuide key="safeArea" id="wpF-P1-aoN"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="UXB-Nm-LdZ" firstAttribute="leading" secondItem="AB3-JX-r91" secondAttribute="leading" constant="3" id="7rH-j2-KXG"/>
-                <constraint firstAttribute="bottom" secondItem="qrJ-P3-Tga" secondAttribute="bottom" constant="11" id="H92-63-hH9"/>
-                <constraint firstItem="s1f-di-Ib0" firstAttribute="top" secondItem="AB3-JX-r91" secondAttribute="top" constant="3" id="LIC-BH-g9K"/>
-                <constraint firstItem="s1f-di-Ib0" firstAttribute="leading" secondItem="UXB-Nm-LdZ" secondAttribute="trailing" constant="13" id="TaM-35-TyJ"/>
+                <constraint firstItem="s1f-di-Ib0" firstAttribute="centerX" secondItem="Nz2-th-XYs" secondAttribute="centerX" id="0G8-jo-g6T"/>
+                <constraint firstItem="UXB-Nm-LdZ" firstAttribute="leading" secondItem="AB3-JX-r91" secondAttribute="leading" constant="20" id="850-Lx-S49"/>
+                <constraint firstItem="s1f-di-Ib0" firstAttribute="top" secondItem="AB3-JX-r91" secondAttribute="top" constant="3" id="OLT-Vn-vPN"/>
+                <constraint firstItem="qrJ-P3-Tga" firstAttribute="top" secondItem="wpF-P1-aoN" secondAttribute="top" constant="7" id="PKg-8h-hkm"/>
                 <constraint firstItem="Nz2-th-XYs" firstAttribute="top" secondItem="AB3-JX-r91" secondAttribute="top" id="XMp-8k-x6d"/>
+                <constraint firstAttribute="bottom" secondItem="s1f-di-Ib0" secondAttribute="bottom" constant="3" id="fNu-ll-ttu"/>
+                <constraint firstItem="UXB-Nm-LdZ" firstAttribute="top" secondItem="wpF-P1-aoN" secondAttribute="top" id="ggb-Nh-Wz3"/>
                 <constraint firstAttribute="bottom" secondItem="Nz2-th-XYs" secondAttribute="bottom" id="hOX-1Z-her"/>
-                <constraint firstAttribute="bottom" secondItem="UXB-Nm-LdZ" secondAttribute="bottom" constant="11" id="k0s-rO-bdY"/>
-                <constraint firstAttribute="bottom" secondItem="s1f-di-Ib0" secondAttribute="bottom" constant="3" id="oRz-pS-rMK"/>
                 <constraint firstAttribute="trailing" secondItem="Nz2-th-XYs" secondAttribute="trailing" id="pbw-Zf-5Zk"/>
-                <constraint firstItem="UXB-Nm-LdZ" firstAttribute="top" secondItem="AB3-JX-r91" secondAttribute="top" constant="11" id="qrq-CC-3di"/>
                 <constraint firstItem="Nz2-th-XYs" firstAttribute="leading" secondItem="AB3-JX-r91" secondAttribute="leading" id="sVI-tF-3CJ"/>
-                <constraint firstAttribute="trailing" secondItem="qrJ-P3-Tga" secondAttribute="trailing" constant="3" id="sa8-eg-b5f"/>
-                <constraint firstItem="qrJ-P3-Tga" firstAttribute="leading" secondItem="s1f-di-Ib0" secondAttribute="trailing" constant="13" id="vaj-oU-JS1"/>
-                <constraint firstItem="qrJ-P3-Tga" firstAttribute="top" secondItem="AB3-JX-r91" secondAttribute="top" constant="11" id="y8S-c2-mOM"/>
+                <constraint firstAttribute="trailing" secondItem="qrJ-P3-Tga" secondAttribute="trailing" constant="10" id="v3F-nR-JLg"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="83" y="28"/>
+            <point key="canvasLocation" x="77" y="26"/>
         </view>
     </objects>
     <resources>
