--- a/WBooks/source/controllers/Details-Book/Comments/CommentsView.xib
+++ b/WBooks/source/controllers/Details-Book/Comments/CommentsView.xib
@@ -15,12 +15,15 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="7gG-e5-sZO">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="406"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6ly-CN-Pdw">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="44" width="400" height="362"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="400" id="8JN-qr-FR5"/>
+                    </constraints>
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="3ak-3V-sBX"/>
@@ -31,7 +34,8 @@
                 <constraint firstItem="6ly-CN-Pdw" firstAttribute="top" secondItem="3ak-3V-sBX" secondAttribute="top" id="agY-oV-GCx"/>
                 <constraint firstItem="3ak-3V-sBX" firstAttribute="trailing" secondItem="6ly-CN-Pdw" secondAttribute="trailing" id="tXV-D3-xqn"/>
             </constraints>
-            <point key="canvasLocation" x="197" y="57"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="181.15942028985509" y="-107.14285714285714"/>
         </view>
     </objects>
     <resources>
