--- a/WBooks/source/controllers/Details-Book/DetailsBookView.xib
+++ b/WBooks/source/controllers/Details-Book/DetailsBookView.xib
@@ -20,17 +20,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="429" height="329"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b4K-rA-hes">
-                    <rect key="frame" x="20" y="64" width="374" height="270"/>
+                    <rect key="frame" x="20" y="12" width="389" height="270"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="94w-U2-Knq">
-                            <rect key="frame" x="0.0" y="0.0" width="374" height="270"/>
+                            <rect key="frame" x="0.0" y="0.0" width="389" height="270"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XGP-9i-nDd">
-                                    <rect key="frame" x="0.0" y="0.0" width="374" height="139"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="389" height="139"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wdi-da-U72">
                                             <rect key="frame" x="16" y="8" width="80" height="123"/>
@@ -40,10 +40,10 @@
                                             </constraints>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="yEO-4h-fwv">
-                                            <rect key="frame" x="104" y="8" width="254" height="123"/>
+                                            <rect key="frame" x="104" y="8" width="269" height="123"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ehs-ry-P3E">
-                                                    <rect key="frame" x="16" y="8" width="36.5" height="18"/>
+                                                    <rect key="frame" x="16" y="32" width="36.5" height="18"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="18" id="6eA-y2-TIQ"/>
                                                     </constraints>
@@ -52,28 +52,28 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="Pdf-TT-XKV">
-                                                    <rect key="frame" x="16" y="34" width="37.5" height="81"/>
+                                                    <rect key="frame" x="16" y="58" width="37.5" height="57"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ujy-Ia-9aj">
-                                                            <rect key="frame" x="0.0" y="0.0" width="37.5" height="18"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="37.5" height="12"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bep-GA-T47">
-                                                            <rect key="frame" x="0.0" y="21" width="37.5" height="18"/>
+                                                            <rect key="frame" x="0.0" y="15" width="37.5" height="12"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ojp-Q2-NTY">
-                                                            <rect key="frame" x="0.0" y="42" width="37.5" height="18"/>
+                                                            <rect key="frame" x="0.0" y="30" width="37.5" height="12"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gad-Sn-ddw">
-                                                            <rect key="frame" x="0.0" y="63" width="37.5" height="18"/>
+                                                            <rect key="frame" x="0.0" y="45" width="37.5" height="12"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -92,10 +92,10 @@
                                     <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="rWp-hX-gTg">
-                                    <rect key="frame" x="0.0" y="174" width="374" height="96"/>
+                                    <rect key="frame" x="0.0" y="174" width="389" height="96"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iSy-0p-stS">
-                                            <rect key="frame" x="20" y="8" width="334" height="30"/>
+                                            <rect key="frame" x="20" y="8" width="349" height="30"/>
                                             <state key="normal" title="ADD TO WISHLIST">
                                                 <color key="titleColor" red="0.0" green="0.67843137254901964" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
@@ -112,7 +112,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mnA-x5-IAt">
-                                            <rect key="frame" x="20" y="58" width="334" height="30"/>
+                                            <rect key="frame" x="20" y="58" width="349" height="30"/>
                                             <state key="normal" title="RENT" backgroundImage="img_main button.png">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </state>
@@ -152,28 +152,17 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LgX-yp-hCG" customClass="CommentsView" customModule="WBooks" customModuleProvider="target">
-                    <rect key="frame" x="20" y="342" width="374" height="520"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="8"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="0.91764705882352937" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="b4K-rA-hes" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="5Qu-Vi-rf2"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="b4K-rA-hes" secondAttribute="bottom" constant="12" id="Am0-Qo-bKb"/>
                 <constraint firstAttribute="trailing" secondItem="b4K-rA-hes" secondAttribute="trailing" constant="20" id="Ezq-VW-EDS"/>
-                <constraint firstItem="LgX-yp-hCG" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Ggy-Gs-07l"/>
-                <constraint firstItem="LgX-yp-hCG" firstAttribute="top" secondItem="b4K-rA-hes" secondAttribute="bottom" constant="8" id="Lvv-fs-utJ"/>
-                <constraint firstItem="b4K-rA-hes" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="Wge-ws-GcY"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="LgX-yp-hCG" secondAttribute="trailing" constant="20" id="WzW-dr-wsd"/>
-                <constraint firstItem="LgX-yp-hCG" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="a9l-VL-Ybh"/>
+                <constraint firstItem="b4K-rA-hes" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="12" id="Wge-ws-GcY"/>
             </constraints>
-            <point key="canvasLocation" x="105.79710144927537" y="178.79464285714286"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="116.66666666666667" y="45.200892857142854"/>
         </view>
     </objects>
     <resources>
