--- a/WBooks/source/controllers/Details-Book/Comments/CommentsCell/CommentsCellView.xib
+++ b/WBooks/source/controllers/Details-Book/Comments/CommentsCell/CommentsCellView.xib
@@ -15,7 +15,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="367" height="113"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_book2" translatesAutoresizingMaskIntoConstraints="NO" id="zsa-e6-OH2">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_user1" translatesAutoresizingMaskIntoConstraints="NO" id="zsa-e6-OH2">
                         <rect key="frame" x="20" y="19" width="45" height="47"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="47" id="BO5-2n-87D"/>
@@ -54,6 +54,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="img_book2" width="41" height="60"/>
+        <image name="img_user1" width="45" height="45"/>
     </resources>
 </document>
