--- a/WBooks/source/controllers/Details-Book/Comments/CommentsView.xib
+++ b/WBooks/source/controllers/Details-Book/Comments/CommentsView.xib
@@ -10,22 +10,31 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CommentsView" customModule="WBooks" customModuleProvider="target">
             <connections>
-                <outlet property="commentsTable" destination="6ly-CN-Pdw" id="SPp-zZ-J4s"/>
+                <outlet property="commentsTable" destination="6ly-CN-Pdw" id="GLQ-He-LIO"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="7gG-e5-sZO">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="406"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="450"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6ly-CN-Pdw">
-                    <rect key="frame" x="0.0" y="0.0" width="400" height="406"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6ly-CN-Pdw">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="450"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="414" id="Z6z-zJ-zdh"/>
+                        <constraint firstAttribute="height" constant="450" id="eWC-WB-eHF"/>
+                    </constraints>
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="3ak-3V-sBX"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="6ly-CN-Pdw" firstAttribute="top" secondItem="7gG-e5-sZO" secondAttribute="top" id="EWI-vo-zR1"/>
+                <constraint firstItem="6ly-CN-Pdw" firstAttribute="leading" secondItem="3ak-3V-sBX" secondAttribute="leading" id="IQe-jV-2WO"/>
+                <constraint firstItem="6ly-CN-Pdw" firstAttribute="trailing" secondItem="3ak-3V-sBX" secondAttribute="trailing" id="VQl-Bq-e96"/>
+                <constraint firstItem="3ak-3V-sBX" firstAttribute="bottom" secondItem="6ly-CN-Pdw" secondAttribute="bottom" id="YpZ-Sc-KRB"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="181.15942028985509" y="-107.14285714285714"/>
         </view>
