--- a/WBooks/source/controllers/NewBook/NewBookView.xib
+++ b/WBooks/source/controllers/NewBook/NewBookView.xib
@@ -1,119 +1,112 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewBookView" customModule="WBooks" customModuleProvider="target">
             <connections>
-                <outlet property="authorBook" destination="lLe-OQ-DY8" id="nhI-gc-i6q"/>
-                <outlet property="descriptionBook" destination="q8c-cv-YcM" id="pvg-jm-dsg"/>
-                <outlet property="imageBook" destination="n1O-hP-IdB" id="cqd-T7-1Si"/>
-                <outlet property="nameBook" destination="Pcp-G5-aHo" id="8Ev-dO-9pR"/>
-                <outlet property="submitButton" destination="X1P-eO-Dvb" id="rDI-MV-LmZ"/>
-                <outlet property="topicBook" destination="dH4-uJ-ttx" id="w0Z-BZ-5z8"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="yearBook" destination="YWu-AQ-teh" id="6Uv-Vl-DHU"/>
+                <outlet property="addImage" destination="CUi-JS-wAM" id="eNZ-Cf-NKa"/>
+                <outlet property="authorBook" destination="FrS-ka-7ht" id="dux-Bt-kzt"/>
+                <outlet property="backgroundView" destination="iN0-l3-epB" id="hTe-Th-AYZ"/>
+                <outlet property="borderView" destination="gvv-3o-Rtl" id="vPE-2g-Qb1"/>
+                <outlet property="descriptionBook" destination="XBu-37-7xV" id="Saq-ha-B6g"/>
+                <outlet property="submitButton" destination="NpV-Dn-WIH" id="CuN-91-CgM"/>
+                <outlet property="topicBook" destination="Y3H-TF-xlm" id="7Ep-iK-KTa"/>
+                <outlet property="yearBook" destination="fCm-sq-LWD" id="TWl-ge-DMR"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="500"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="taQ-B9-LjY">
-                    <rect key="frame" x="20" y="10" width="374" height="480"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gvv-3o-Rtl">
+                    <rect key="frame" x="24" y="20" width="271" height="533"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="39" translatesAutoresizingMaskIntoConstraints="NO" id="iJH-aE-NWY">
-                            <rect key="frame" x="10" y="10" width="354" height="460"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="52" translatesAutoresizingMaskIntoConstraints="NO" id="YYu-SE-JEe">
+                            <rect key="frame" x="20" y="20" width="231" height="493"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_add new" translatesAutoresizingMaskIntoConstraints="NO" id="n1O-hP-IdB">
-                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CUi-JS-wAM" userLabel="Add Image">
+                                    <rect key="frame" x="0.0" y="0.0" width="89" height="89"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="80" id="3Xc-0b-Te2"/>
-                                        <constraint firstAttribute="height" constant="80" id="b3b-tM-85A"/>
+                                        <constraint firstAttribute="width" constant="89" id="inL-fm-Kmy"/>
+                                        <constraint firstAttribute="height" constant="89" id="o2S-EM-eAu"/>
                                     </constraints>
-                                </imageView>
-                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="4NV-dk-PxE">
-                                    <rect key="frame" x="0.0" y="119" width="349" height="272"/>
+                                    <state key="normal" image="ic_add new"/>
+                                </button>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="UqN-Pq-c4p">
+                                    <rect key="frame" x="0.0" y="141" width="231" height="256"/>
                                     <subviews>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pcp-G5-aHo">
-                                            <rect key="frame" x="0.0" y="0.0" width="349" height="45"/>
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1fC-4o-v7b" userLabel="Book Name">
+                                            <rect key="frame" x="0.0" y="0.0" width="231" height="44"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lLe-OQ-DY8">
-                                            <rect key="frame" x="0.0" y="57" width="349" height="44.5"/>
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FrS-ka-7ht" userLabel="Book Author">
+                                            <rect key="frame" x="0.0" y="53" width="231" height="44"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YWu-AQ-teh">
-                                            <rect key="frame" x="0.0" y="113.5" width="349" height="45"/>
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fCm-sq-LWD" userLabel="Book Year">
+                                            <rect key="frame" x="0.0" y="106" width="231" height="44"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dH4-uJ-ttx">
-                                            <rect key="frame" x="0.0" y="170.5" width="349" height="44.5"/>
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y3H-TF-xlm" userLabel="Book Genre">
+                                            <rect key="frame" x="0.0" y="159" width="231" height="44"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="q8c-cv-YcM">
-                                            <rect key="frame" x="0.0" y="227" width="349" height="45"/>
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XBu-37-7xV" userLabel="Book Description">
+                                            <rect key="frame" x="0.0" y="212" width="231" height="44"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
                                     </subviews>
                                 </stackView>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X1P-eO-Dvb">
-                                    <rect key="frame" x="0.0" y="430" width="349" height="30"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="xN7-dg-EE1"/>
-                                    </constraints>
-                                    <state key="normal" title="SUBMIT" backgroundImage="img_main button.png">
-                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NpV-Dn-WIH" userLabel="Submit ">
+                                    <rect key="frame" x="0.0" y="449" width="231" height="44"/>
+                                    <state key="normal" title="Submit" backgroundImage="img_main button.png">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </state>
                                 </button>
                             </subviews>
                             <constraints>
-                                <constraint firstAttribute="trailing" secondItem="4NV-dk-PxE" secondAttribute="trailing" constant="5" id="6VU-mn-BOH"/>
-                                <constraint firstItem="n1O-hP-IdB" firstAttribute="leading" secondItem="iJH-aE-NWY" secondAttribute="leading" id="Gv3-rd-RuC"/>
-                                <constraint firstItem="4NV-dk-PxE" firstAttribute="top" secondItem="n1O-hP-IdB" secondAttribute="bottom" constant="39" id="ZfS-v0-Lzq"/>
-                                <constraint firstAttribute="trailing" secondItem="X1P-eO-Dvb" secondAttribute="trailing" constant="5" id="Zwv-28-BEf"/>
-                                <constraint firstItem="n1O-hP-IdB" firstAttribute="top" secondItem="iJH-aE-NWY" secondAttribute="top" id="o2T-fk-JsY"/>
-                                <constraint firstItem="X1P-eO-Dvb" firstAttribute="top" secondItem="4NV-dk-PxE" secondAttribute="bottom" constant="39" id="oh3-FX-rDC"/>
+                                <constraint firstAttribute="trailing" secondItem="NpV-Dn-WIH" secondAttribute="trailing" id="3F5-2R-6Vi"/>
+                                <constraint firstAttribute="trailing" secondItem="UqN-Pq-c4p" secondAttribute="trailing" id="Ami-sw-S2I"/>
+                                <constraint firstItem="UqN-Pq-c4p" firstAttribute="leading" secondItem="YYu-SE-JEe" secondAttribute="leading" id="D3b-PN-AbI"/>
+                                <constraint firstItem="CUi-JS-wAM" firstAttribute="top" secondItem="YYu-SE-JEe" secondAttribute="top" id="OqX-UV-pNO"/>
+                                <constraint firstItem="NpV-Dn-WIH" firstAttribute="leading" secondItem="YYu-SE-JEe" secondAttribute="leading" id="f6D-uE-EQ3"/>
+                                <constraint firstItem="CUi-JS-wAM" firstAttribute="leading" secondItem="YYu-SE-JEe" secondAttribute="leading" id="iz7-hg-mdJ"/>
                             </constraints>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="iJH-aE-NWY" firstAttribute="leading" secondItem="taQ-B9-LjY" secondAttribute="leading" constant="10" id="6uG-lv-Huo"/>
-                        <constraint firstAttribute="trailing" secondItem="iJH-aE-NWY" secondAttribute="trailing" constant="10" id="Uxs-pd-I8D"/>
-                        <constraint firstItem="iJH-aE-NWY" firstAttribute="top" secondItem="taQ-B9-LjY" secondAttribute="top" constant="10" id="dZ9-DP-0Ev"/>
-                        <constraint firstAttribute="bottom" secondItem="iJH-aE-NWY" secondAttribute="bottom" constant="10" id="z26-Af-7A1"/>
+                        <constraint firstAttribute="trailing" secondItem="YYu-SE-JEe" secondAttribute="trailing" constant="20" id="5eV-3d-JwR"/>
+                        <constraint firstItem="YYu-SE-JEe" firstAttribute="leading" secondItem="gvv-3o-Rtl" secondAttribute="leading" constant="20" id="TZi-DJ-Yp5"/>
+                        <constraint firstAttribute="bottom" secondItem="YYu-SE-JEe" secondAttribute="bottom" constant="20" id="nHE-AH-mjF"/>
+                        <constraint firstItem="YYu-SE-JEe" firstAttribute="top" secondItem="gvv-3o-Rtl" secondAttribute="top" constant="20" id="xdD-xk-zjO"/>
                     </constraints>
                 </view>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="taQ-B9-LjY" secondAttribute="bottom" constant="10" id="0Yg-cI-8zN"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="taQ-B9-LjY" secondAttribute="trailing" constant="20" id="SJ8-Fw-w4B"/>
-                <constraint firstItem="taQ-B9-LjY" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="10" id="aSA-cz-FZd"/>
-                <constraint firstItem="taQ-B9-LjY" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="zTx-aj-Ogt"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="gvv-3o-Rtl" secondAttribute="trailing" constant="25" id="0q9-kE-Y86"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="gvv-3o-Rtl" secondAttribute="bottom" constant="15" id="H3O-d6-V65"/>
+                <constraint firstItem="gvv-3o-Rtl" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="24" id="Qil-v9-nqG"/>
+                <constraint firstItem="gvv-3o-Rtl" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="lij-L5-WPS"/>
             </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="114.49275362318842" y="-131.25"/>
+            <point key="canvasLocation" x="50.625" y="55.985915492957744"/>
         </view>
     </objects>
     <resources>
         <image name="ic_add new" width="50" height="50"/>
         <image name="img_main button.png" width="275" height="44"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
